# flo

./: CMakeLists.txt  README.md
flo.bbprojectd/: paul.bbprojectsettings  project.bbprojectdata  project.lockfile
include/: control.hpp  data.hpp  function.hpp  functions.hpp  generic.hpp  list.hpp  listfun.hpp  method.hpp  processor.hpp  reflect.hpp  state.hpp  transform.hpp  values.hpp
include/functions/: apply.hpp  cur.hpp  dict.hpp  equal.hpp  filter.hpp  getmember.hpp  head.hpp  if.hpp  length.hpp  list.hpp  map.hpp  null.hpp  pass.hpp  quote.hpp  select.hpp  setmember.hpp  string.hpp  tail.hpp  true.hpp
src/: docs.json  flo.cpp  functions.cpp  generic.cpp  method.cpp  processor.cpp  reflect.cpp  state.cpp  transform.cpp
src/functions/: apply.cpp  arg.cpp  cur.cpp  dict.cpp  equal.cpp  filter.cpp  getmember.cpp  head.cpp  if.cpp  length.cpp  list.cpp  map.cpp  null.cpp  pass.cpp  quote.cpp  select.cpp  setmember.cpp  string.cpp  stringcat.cpp  tail.cpp  true.cpp
test/: apply-mask-t.json  apply-t.json  apply-t.yml  applytest.cpp  arg-t.json  argtest.cpp  bad-t.json  cur-t.json  cur-t.yml  empty-apply-t.json  filter-t.json  filtertest.cpp  hello-t.json  helloworldtest.cpp  lengthtest.cpp  library-t.json  libtest.cpp  list-length-t.json  map-t.json  maptest.cpp  message.json  nested-apply-t.json  null-apply-t.json  null-map-t.json  null-t.json  quote-t.json  simpletest.cpp  string-length-t.json  string-t.json  stringcat-t.json  stringcattest.cpp  stringlength-t.json  true-t.json  utils.cpp  utils.hpp
